layout shifts fixed on take attendance

--- a/app/styles/attendance.css
+++ b/app/styles/attendance.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
   background-color: #f3f4f6;
-  padding: 1rem;
+  /* padding: 1rem; */
   color: var(--text-dark);
 }
 
@@ -176,9 +176,10 @@ header {
 /* ----------------- Desktop Enhancements ------------------ */
 @media (min-width: 768px) {
   body {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 2rem;
+    /* max-width: 1000px; */
+    /* margin: 0 auto; */
+    /* padding: 2rem; */
+    overflow-x: hidden;
   }
 
   header {
